--- a/SmartGroceryListApp/Base.lproj/Main.storyboard
+++ b/SmartGroceryListApp/Base.lproj/Main.storyboard
@@ -72,6 +72,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="n1b-yj-Xh0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="n1b-yj-Xh0" firstAttribute="trailing" secondItem="aPg-qk-Yf4" secondAttribute="trailing" id="086-yT-n5l"/>
                             <constraint firstItem="H21-nh-E6N" firstAttribute="top" secondItem="n1b-yj-Xh0" secondAttribute="top" constant="40" id="A3l-dH-b0Q"/>
@@ -84,6 +85,9 @@
                             <constraint firstItem="TH5-e0-06R" firstAttribute="top" secondItem="aPg-qk-Yf4" secondAttribute="bottom" constant="8" id="sRk-95-YA9"/>
                             <constraint firstItem="TH5-e0-06R" firstAttribute="trailing" secondItem="n1b-yj-Xh0" secondAttribute="trailing" id="yrl-Mv-U1i"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="k47-ui-TZz" appends="YES" id="rW7-m7-pPm"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="qVg-85-Qu3"/>
                     <connections>
@@ -93,6 +97,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KcH-ZQ-hTS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="k47-ui-TZz">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="0sF-D6-bZw" id="kYc-ga-F6h"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-1112" y="297"/>
         </scene>
